Fixed z-index issue with promo bar and shopping bag widget.

--- a/wp-content/themes/tideandpool/style.less
+++ b/wp-content/themes/tideandpool/style.less
@@ -256,7 +256,7 @@ header .inner {
 	font-size: 11px;
 	letter-spacing: 2px;
 	position: relative;
-	z-index: 200;
+	z-index: 300;
 }
 .main-nav .inner {
 	min-height: 30px;
@@ -301,7 +301,7 @@ header .inner {
     right: 0;
     top: 0;
     width: 311px;
-    z-index: 20000;
+    /* z-index: 300; */
     font-family: 'ProximaNovaRegular';
     .my-shopping-bag {
     	float:right;
@@ -468,7 +468,7 @@ header .inner {
 	color:#4d004e;
 	text-align: center;
 	background: url('css/img/global/anouncement-bg.png') no-repeat center top;
-	z-index: 200;
+	/* z-index: 200; */
 	font-family: 'ProximaNovaRegular';
 	a {
 		font-family: 'ProximaNovaBold';
@@ -776,6 +776,7 @@ article.body-content {
 .content {
 	width:100%;
 	margin: 0 auto ;
+	margin:0 0 100px 0;
 	/* overflow: auto;
 	/* padding-bottom: 60px; */
 	#container {
